# hyperliquid-mcp

./: .env.example  .gitignore  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
src/hyperliquid_mcp/: __init__.py  server.py
