[project]
name = "hyperliquid-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Hyperliquid trading using the official Python SDK"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hyperliquid MCP", email = "dev@example.com" }
]
dependencies = [
    "hyperliquid-python-sdk>=0.6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperliquid_mcp"]

[project.scripts]
hyperliquid-mcp = "hyperliquid_mcp.server:main"
